--- a/static/css/pythontj.css
+++ b/static/css/pythontj.css
@@ -11,7 +11,7 @@
     font-weight: 400;
     padding: 0.75em 0;
     letter-spacing: 1px;
-    color: #386697;
+    color: #5e5e5e;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -22,7 +22,7 @@
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
-    background-color: white;
+    background-color: #f8f9fa;
     box-shadow: 0 2px 0 rgba(0,0,0,.1);
   }
   #mainNav .navbar-brand {
@@ -36,11 +36,114 @@
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
-    background-color: white;
+    background-color: #f8f9fa;
     opacity: 1;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
     padding: 12px 0;
   }
+}
+
+.countdown-timer-wrapper {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 20px;
+  max-width: 300px;
+  margin: 50px auto;
+}
+
+.countdown-timer-wrapper h5 {
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  text-align: center;
+  padding-top: 10px;
+  text-shadow: none;
+}
+
+.countdown-timer-wrapper .timer {
+  padding: 10px;
+  text-align: center;
+  padding-top: 15px;
+}
+
+.countdown-timer-wrapper .timer .timer-wrapper {
+  display: inline-block;
+  width: 60px;
+  height: 50px;
+}
+
+.countdown-timer-wrapper .timer .timer-wrapper .time {
+  font-size: 28px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.countdown-timer-wrapper .timer .timer-wrapper .text {
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+div.title{
+  color: #1d2129;
+  display: block;
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 16px;
+  margin-right: 12px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.event-data-box {
+  position: relative;
+  padding: 0;
+  margin: 25px 0;
+}
+.event-data-box i {
+  position: absolute;
+  left: 20%;
+  font-size: 56px;
+  width: 50px;
+  color: #386697;
+  top: 0;
+  bottom: auto;
+  line-height: 1;
+}
+.event-data-box .content {
+  margin-left: 42%;
+}
+.event-data-box .content .box_title {
+  margin-bottom: 3px;
+  font-weight: 500;
+  margin-top: 6px;
+}
+.event-data-box .content p {
+  font-weight: 500;
+  color: #838383;
+}
+
+.facebook-group {
+  background: #fefefe;
+  border: 8px solid #29487D;
+  border-radius: 8px;
+  opacity: 0.95;
+  padding: 20px;
+
+  width: 60%;
+    margin: 0 auto;
+}
+
+section#group .facebook-group .section-heading {
+  color: #29487D;
+}
+
+section .facebook-group h3.section-subheading {
+  color: #1d2129;
+  margin-bottom: 15px;
+}
+
+section .facebook-group img.fb-icon {
+
 }
