--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
   </div>
 </section>
 
-<section class="bg-light" id="portfolio">
+<section class="bg-light" id="events">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -59,7 +59,7 @@
 </section>
 
 <!-- Team -->
-<section id="events">
+<section id="sponsors">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -139,34 +139,6 @@
             </li>
           </ul>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Clients -->
-<section class="py-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 col-sm-6">
-        <a href="#">
-          <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-        </a>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <a href="#">
-          <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-        </a>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <a href="#">
-          <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-        </a>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <a href="#">
-          <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-        </a>
       </div>
     </div>
   </div>
