--- a/templates/templatetags/home_next_event.html
+++ b/templates/templatetags/home_next_event.html
@@ -26,7 +26,7 @@
                     Lugar
                 </h5>
                 <p>
-                    <a href="{{ next_event.venue_map_url }}" target="_blank">{{ next_event.venue_name }}</a>
+                    <a class="underline" href="{{ next_event.venue_map_url }}" target="_blank">{{ next_event.venue_name }}</a>
                 </p>
             </div>
         </div>
@@ -40,7 +40,7 @@
                     Registro
                 </h5>
                 <p>
-                    <a href="">Click aquí</a>
+                    <a class="underline" href="{{ next_event.url }}" target="_blank">Click aquí</a>
                 </p>
             </div>
         </div>
