Implemented django compress library. Changed css to less Added new Blog templates.

--- a/static/css/pythontj.less
+++ b/static/css/pythontj.less
@@ -159,3 +159,7 @@ section .facebook-group h3.section-subheading {
 section .facebook-group img.fb-icon {
 
 }
+
+span.comodo-ssl-icon {
+  margin-left: 10px;
+}
