--- a/templates/home.html
+++ b/templates/home.html
@@ -15,14 +15,14 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#welcome">Bienvenido</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#events">Evento</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#group">Grupo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'blog' %}">Blog</a>
         </li>
       </ul>
     </div>
