--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,18 @@
-{% load static %}
+{% load static compress %}
 
 <!DOCTYPE html>
 <html lang="en">
 
   <head>
-
+    <title>{% block title %}Grupo de usuarios de Python de Tijuana{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="{% block description %}{% endblock %}">
 
-    <title>Grupo de usuarios de Python de Tijuana</title>
+    <meta property="og:site_name" content="Python Tijuana"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="{% block og_title %}Grupo de usuarios de Python de Tijuana{% endblock %}"/>
+    <meta property="og:description" content="{% block og_description %}{% endblock %}"/>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -23,8 +25,11 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/agency.css' %}" rel="stylesheet">
-    <link href="{% static 'css/pythontj.css' %}" rel="stylesheet">
+    {% compress css %}
+    <link href="{% static 'css/agency.less' %}" rel="stylesheet" type="text/less">
+    <link href="{% static 'css/pythontj.less' %}" rel="stylesheet" type="text/less">
+    <link href="{% static 'css/blog.less' %}" rel="stylesheet" type="text/less">
+    {% endcompress %}
 
   </head>
 
@@ -39,6 +44,7 @@
         <div class="row">
           <div class="col-md-4">
             <span class="copyright">Copyright &copy; 2018</span>
+            <span class="comodo-ssl-icon"><img src="{% static 'img/comodo_secure_seal_76x26_transp.png' %}"></span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
@@ -50,6 +56,11 @@
               <li class="list-inline-item">
                 <a href="https://www.facebook.com/groups/pythontijuana/" target="_blank">
                   <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.meetup.com/es-ES/Python-Tijuana/" target="_blank">
+                  <i class="fab fa-meetup"></i>
                 </a>
               </li>
             </ul>
@@ -78,8 +89,5 @@
     <!-- Custom scripts for this template -->
     <script src="{% static 'js/agency.min.js' %}"></script>
 
-
-
   </body>
-
 </html>
