--- a/static/css/agency.less
+++ b/static/css/agency.less
@@ -4,6 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-agency/blob/master/LICENSE)
  */
 
+ @import "colors.less";
+
 body {
   overflow-x: hidden;
   font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -14,7 +16,7 @@ p {
 }
 
 a {
-  color: #386697;
+  color: @primaryBackgroundColor;
 }
 
 a:hover {
@@ -22,7 +24,7 @@ a:hover {
 }
 
 .text-primary {
-  color: #386697 !important;
+  color: @primaryBackgroundColor !important;
 }
 
 h1,
@@ -71,8 +73,8 @@ section h3.section-subheading {
 }
 
 .btn-primary {
-  background-color: #386697;
-  border-color: #386697;
+  background-color: @primaryBackgroundColor;
+  border-color: @primaryBackgroundColor;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
@@ -87,12 +89,12 @@ section h3.section-subheading {
 }
 
 ::-moz-selection {
-  background: #386697;
+  background: @selectionBackgroundColor;
   text-shadow: none;
 }
 
 ::selection {
-  background: #386697;
+  background: @selectionBackgroundColor;
   text-shadow: none;
 }
 
@@ -119,12 +121,12 @@ img::-moz-selection {
   text-transform: uppercase;
   color: white;
   border: 0;
-  background-color: #386697;
+  background-color: @primaryBackgroundColor;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand {
-  color: #386697;
+  color: @primaryBackgroundColor;
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -142,7 +144,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #386697;
+  color: @primaryBackgroundColor;
 }
 
 @media (min-width: 992px) {
@@ -452,7 +454,7 @@ header.masthead .intro-text .intro-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #386697;
+  background-color: @primaryBackgroundColor;
 }
 
 .timeline > li .timeline-image h4 {
@@ -623,7 +625,7 @@ section#group .form-group textarea.form-control {
 }
 
 section#group .form-control:focus {
-  border-color: #386697;
+  border-color: @primaryBackgroundColor;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -691,5 +693,5 @@ ul.social-buttons li a {
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #386697;
+  background-color: @primaryBackgroundColor;
 }
