--- a/static/css/pythontj.less
+++ b/static/css/pythontj.less
@@ -1,9 +1,15 @@
+@import "colors.less";
+
+@logoWidth: 170px;
+@logoHeight: 68px;
+
+
 a {
-  color: #5e5e5e;
+  color: @primaryColor;
 }
 
 a:hover {
-  color: #386697;
+  color: @primaryBackgroundColor;
 }
 
 .underline {
@@ -12,10 +18,10 @@ a:hover {
 
 .logo {
     display: block;
-    width: 150px;
-    height: 75px;
+    width: @logoWidth;
+    height: @logoHeight;
     background: url(../img/svg/python-tijuana-logo-horizontal.svg);
-    background-size: 150px 75px;
+    background-size: @logoWidth @logoHeight;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -23,7 +29,7 @@ a:hover {
     font-weight: 400;
     padding: 0.75em 0;
     letter-spacing: 1px;
-    color: #5e5e5e;
+    color: @primaryColor;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -118,7 +124,7 @@ div.title{
   left: 20%;
   font-size: 56px;
   width: 50px;
-  color: #386697;
+  color: @primaryBackgroundColor;
   top: 0;
   bottom: auto;
   line-height: 1;
