--- a/static/css/colors.less
+++ b/static/css/colors.less
@@ -1,7 +1,8 @@
 
 @primaryColor: #5e5e5e;
 @primaryBackgroundColor: #386697;
+@secondaryColor: #868e96;
 @selectionBackgroundColor: #D3D3D3;
 
-@blogDateColor: #868e96;
+@blogDateColor: @secondaryColor;
 @blogTitleColor: #212529;
