--- a/templates/blog/blog_post.html
+++ b/templates/blog/blog_post.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
-{% load static sorl_thumbnail %}
+{% load static sorl_thumbnail helper_tags disqus_tags %}
 
 {% block title %}{% block og_title %}{{ blog_post.title }}{% endblock %}{% endblock %}
+
+{% block meta_tags %}
+{% include "meta/meta.html" %}
+{% endblock %}
 
 {% block navigation %}
 {% include 'blog/blog_navbar.html' %}
@@ -23,71 +27,51 @@
         <h1 class="mt-4">{{ blog_post.title }}</h1>
 
         <!-- Date/Time -->
-        <p class="date">Públicado en {{ blog_post.published_at|date:'F d, Y' }}</p>
+        <p class="date">Públicado en <time id="date" datetime="{{ blog_post.published_at|date:'Y-m-d' }}">{{ blog_post.published_at|date:'F d, Y' }}</time></p>
         <hr>
         <!-- Post Content -->
         {{ blog_post.content|safe }}
+
+        <div class="share">
+          <ul>
+            <li>
+              <a href="https://facebook.com/sharer.php?u={% full_uri blog_post.get_absolute_url %}" target="_blank">Facebook</a>
+            </li>
+            <li>
+              <a href="https://twitter.com/intent/tweet?url={% full_uri blog_post.get_absolute_url %}&amp;text={{ blog_post.title }}&amp;via=PythonTijuana" target="_blank">Twitter</a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/cws/share?url={% full_uri blog_post.get_absolute_url %}" target="_blank">Linkedin</a>
+            </li>
+          </ul>
+        </div>
         <hr>
 
+        {% if blog_post.author %}
+        {% with blog_post.author as author %}
         <!-- Post Author -->
         <div class="media mt-4 author">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/80x80" alt="">
+          {% if author.profile.photo %}
+          {% thumbnail author.profile.photo "80x80" crop="center" as photo %}
+            <img class="photo d-flex mr-3 rounded-circle" src="{{ photo.url }}" alt="{{ author.get_full_name }}">
+          {% endthumbnail %}
+          {% endif %}
           <div class="media-body">
-            <h5 class="mt-0 name">Commenter Name</h5>
-            <p class="description">
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
+            <h5 class="mt-0 name">{{ author.get_full_name }}</h5>
+            <p class="bio">
+              {{ author.profile.bio|safe }}
             </p>
           </div>
         </div>
         <hr>
+        {% endwith %}
+        {% endif %}
 
-        <!-- Comments Form -->
-        <div class="card my-4">
-          <h5 class="card-header">Leave a Comment:</h5>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <textarea class="form-control" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-        </div>
+        {% set_disqus_identifier "post_" blog_post.pk|stringformat:"i" %}
+        {% set_disqus_title blog_post.title %}
+        {% disqus_show_comments %}
+        {% disqus_dev %}
 
-        <!-- Single Comment -->
-        <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-          <div class="media-body">
-            <h5 class="mt-0">Commenter Name</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-          </div>
-        </div>
-
-        <!-- Comment with nested comments -->
-        <div class="media mb-4">
-          <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-          <div class="media-body">
-            <h5 class="mt-0">Commenter Name</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
-            <div class="media mt-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
-          </div>
-        </div>
       </div>
     </div>
   </div>
