Fixed css issues in the responsove deisng.

--- a/static/css/colors.less
+++ b/static/css/colors.less
@@ -2,7 +2,10 @@
 @primaryColor: #5e5e5e;
 @primaryBackgroundColor: #386697;
 @secondaryColor: #868e96;
+@secondaryBackgroundColor: #f8f9fa;
 @selectionBackgroundColor: #D3D3D3;
 
+@darkColor: #212529;
+
 @blogDateColor: @secondaryColor;
-@blogTitleColor: #212529;
+@blogTitleColor: @darkColor;
