--- a/static/css/agency.less
+++ b/static/css/agency.less
@@ -111,7 +111,8 @@ img::-moz-selection {
 }
 
 #mainNav {
-  background-color: #212529;
+  background-color: @secondaryBackgroundColor;
+  box-shadow: 0 2px 0 rgba(0,0,0,.1);
 }
 
 #mainNav .navbar-toggler {
@@ -134,27 +135,28 @@ img::-moz-selection {
   color: #fec503;
 }
 
-#mainNav .navbar-nav .nav-item .nav-link {
-  font-size: 90%;
-  font-weight: 400;
-  padding: 0.75em 0;
-  letter-spacing: 1px;
-  color: white;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
-
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: @primaryBackgroundColor;
 }
 
-@media (min-width: 992px) {
+#mainNav .navbar-nav .nav-item .nav-link {
+    font-size: 90%;
+    font-weight: 400;
+    padding: 0.75em 0;
+    letter-spacing: 1px;
+    color: @primaryColor;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+@media (min-width: 992px) and (min-width: 768px) {
   #mainNav {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
-    background-color: transparent;
+    background-color: @secondaryBackgroundColor;
+    box-shadow: 0 2px 0 rgba(0,0,0,.1);
   }
   #mainNav .navbar-brand {
     font-size: 1.75em;
@@ -167,7 +169,8 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
-    background-color: #212529;
+    background-color: @secondaryBackgroundColor;
+    opacity: 1;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
@@ -375,7 +378,7 @@ header.masthead .intro-text .intro-heading {
   /* IE 9 */
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
-  background-color: #212529;
+  background-color: @secondaryBackgroundColor;
 }
 
 .portfolio-modal .close-modal .lr .rl {
@@ -386,7 +389,7 @@ header.masthead .intro-text .intro-heading {
   /* IE 9 */
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
-  background-color: #212529;
+  background-color: @secondaryBackgroundColor;
 }
 
 .timeline {
@@ -597,7 +600,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 section#group {
-  background-color: #212529;
+  background-color: @secondaryBackgroundColor;
   background-image: url("../img/map-image.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -689,7 +692,7 @@ ul.social-buttons li a {
   color: white;
   border-radius: 100%;
   outline: none;
-  background-color: #212529;
+  background-color: @darkColor;
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
