Added recent posts section to home.

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
 
     <link href="{% static 'css/agency.less' %}" rel="stylesheet" type="text/less">
+    <link href="{% static 'css/home.less' %}" rel="stylesheet" type="text/less">
     <link href="{% static 'css/pythontj.less' %}" rel="stylesheet" type="text/less">
     <link href="{% static 'css/blog.less' %}" rel="stylesheet" type="text/less">
     {% endcompress %}
