--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,10 @@
         <h3 class="section-subheading text-muted">La comunidad de pythonistas en Tijuana, México.</h3>
       </div>
     </div>
-    <div class="row text-center">
+    <div class="row text-center home-posts">
+      <h3 class="home-posts-title">Publicaciones recientes</h3>
+
+      {% home_blog_posts %}
     </div>
   </div>
 </section>
